--- a/CobroCoactivo/web/paginas/gestionDeudas/gestionConsultarDeudas.xhtml
+++ b/CobroCoactivo/web/paginas/gestionDeudas/gestionConsultarDeudas.xhtml
@@ -123,7 +123,7 @@
                                     </div>
                                 </div>
                                 <h:panelGroup  id="pnlTablaDeduasPersonas">
-                                    <table class="table table-bordered table-hover">
+                                    <table class="table table-bordered table-hover" id="dataTableDetalle">
                                         <div class="row">
                                             <thead>
                                                 <tr>
@@ -133,6 +133,7 @@
                                                     <th>Persona</th>
                                                     <th>Fecha Deuda</th>
                                                     <th>Valor</th>
+                                                    <th>Crear Expediente</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -151,6 +152,14 @@
                                                         </td>
                                                         <td>#{deudaPersona.fechaDeudas}</td>
                                                         <td>#{deudaPersona.valor}</td>
+                                                        <td>
+                                                            <span class="input-group-btn">
+                                                                <h:commandLink class="btn btn-success" >
+                                                                    <i class="fa fa-plus-square"></i>
+                                                                    <f:ajax event="click" execute="frmExpedientes:sltDocumentos frmExpedientes:txtNumero" listener="#{gestionExpedientesBean.buscarPersona()}" render="frmExpedientes:pnlPersonaEncontrada" ></f:ajax>
+                                                                </h:commandLink>
+                                                            </span>
+                                                        </td>
                                                     </tr>
                                                 </ui:repeat>
                                             </tbody>
