--- a/CobroCoactivo/web/paginas/gestionServicios/gestionActosAdministractivo.xhtml
+++ b/CobroCoactivo/web/paginas/gestionServicios/gestionActosAdministractivo.xhtml
@@ -15,7 +15,7 @@
                     <div class="content-wrapper">
                         <section class="content-header">
                             <h1>
-                                Consultas y adicionar personas
+                                Consultas y sincronizar actos administractivos
                                 <!-- <small>guia formulario para consultas</small> -->
                             </h1>
                             <ol class="breadcrumb">
@@ -30,7 +30,7 @@
                             <div class="box box-danger">
                                 <div class="box-header with-border">
                                     <div class="box-title">
-                                        <h3 class="">Personas </h3>
+                                        <h3 class="">Actos administractivos</h3>
                                     </div>
                                     <!-- <button class="btn btn-success center-block" style="float: right ">Sincronizar todos</button> -->
                                 </div>
@@ -53,8 +53,8 @@
                                                         </h:outputText>
                                                     </td>
                                                     <td>
-                                                        <h:commandLink class="fa fa-eye col-sm-4" onclick="$('#modalPagos').modal('show')">
-                                                            <f:ajax event="click" listener="#{gestionPagosbean.verPagos(persona)}" render="frmGestionPagos:modalPagosContent">
+                                                        <h:commandLink class="fa fa-eye col-sm-4" onclick="$('#modalActosAdministractivo').modal('show')">
+                                                            <f:ajax event="click" listener="#{actosAdministractivobean.verCartera(actosAdministractivos)}" render="frmGestionPagos:modalPagosBody">
 
                                                             </f:ajax>
                                                         </h:commandLink>
@@ -65,42 +65,37 @@
                                     </table>
                                 </h:panelGroup>
                             </div>
-                            <div class="modal fade"  tabindex="-1" id="modalPagos"  aria-hidden="true" role="dialog" aria-labelledby="myModalLabel">
+                            <div class="modal fade"  tabindex="-1" id="modalActosAdministractivo"  aria-hidden="true" role="dialog" aria-labelledby="myModalLabel">
                                 <div class="modal-dialog">
-                                    <div class="modal-content" jsf:id="modalPagosContent">
+                                    <div class="modal-content" >
                                         <div class="modal-header">
-                                            <h4 class="modal-title" id="myModalLabel">Pagos #{gestionCargarPersonasBean.personas.nombre1} #{gestionCargarPersonasBean.personas.apellido1}</h4>
+                                            <h4 class="modal-title" id="myModalLabel">Carteras</h4>
 
                                         </div>
                                         <div class="row">
                                             <div class="col-lg-12">
                                             </div>
                                         </div>
-                                        <div class="modal-body">
+                                        <div class="modal-body" >
                                             <p:messages id="messageCargarPersona" autoUpdate="true" closable="true" showDetail="false" showIcon="false"></p:messages>
                                             <table class="table table-hover table-bordered">
                                                 <thead>
                                                     <tr>
-                                                        <th>Numero factura</th>
+                                                        <th>Referencia</th>
                                                         <th>Fecha</th>
-                                                        <th>Total</th>
                                                     </tr>
                                                 </thead>
-                                                <tbody>
-
-                                                    <ui:repeat value="#{gestionPagosbean.listPagos}" var="pago">
+                                                <tbody jsf:id="modalPagosBody">
+                                                    <ui:repeat value="#{actosAdministractivobean.listDeudas}" var="deuda">
                                                         <tr>
                                                             <td>
-                                                                #{pago.numero}
+                                                                #{deuda.referencia}
                                                             </td>
                                                             <td>
-                                                                <h:outputText value="#{pago.fecha}">
+                                                                <h:outputText value="#{deuda.fechaDeudas}">
                                                                     <f:convertDateTime pattern="dd-MM-yyyy" />
                                                                 </h:outputText>
-
                                                             </td>
-                                                            <td>#{pago.valor}</td>
-
                                                         </tr>
                                                     </ui:repeat>
                                                 </tbody>
@@ -116,7 +111,7 @@
                                                 </div>
                                                 <div class="col-lg-4">
                                                     <h:commandLink value="Sincronizar" id="btnGuardarPlanTrabajo" class="btn btn-success">
-                                                        <f:ajax event="click" render="formPlanTrabajo:contenedor formPlanTrabajo:modalPlanTrabajo" listener="#{gestionPagosbean.sincronizarPagos()}" execute="formPlanTrabajo:modalPlanTrabajo"/>
+                                                        <f:ajax event="click" render="formPlanTrabajo:contenedor formPlanTrabajo:modalPlanTrabajo" listener="#{actosAdministractivobean.sincronizarActosAdministractivo()}"/>
                                                     </h:commandLink>
                                                 </div>
                                             </div>
